--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "goit-react-hw-01-components",
+  "name": "react-webpack",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://blood-mari.github.io/goit-react-hw-01-components",
+  "homepage": "https://blood-mari.github.io/react-webpack",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
